2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03418] Re: tab browser
	* display.c (redrawNLine): s/clrtoeol/clrtoeolx/
				move rootY

2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03417] install_w3mimgdisplay
	* configure: define install_w3mimgdisplay 
			after use_w3mimg_fb determined

2002-11-12  Akira TAGOH <at@gclab.org>

	* [w3m-dev 03415] fix a build issue for 64bit arch
	* gcmain.c: deleted
	* main.c: no need gcmain.c
		s/MAIN/main/
	* mktable.c: ditto
	* w3mbookmark.c: ditto
	* w3mhelperpanel.c: ditto

2002-11-12  Fumitoshi UKAI  <ukai@debian.or.jp>

	* doc/w3m.1: update
	* doc-jp/w3m.1: update
	* NEWS: update: -show-option

2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03414] Re: show parameter
	* main.c (fusage): add -show-option
		(MAIN): check -show-option

2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03413] Re: setting form on loading
	* form.c (loadPreForm): add textarea
		(preFormUpdateBuffer): submit if value is matched as well
				case FORM_TEXTAREA
				case FORM_SELECT ifdef MENU_SELECT

2002-11-12  Yuji Abe <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03411] do AUXBIN_TARGETS
	* scripts/Makefile (all): add AUXBIN_TARGETS
			(clean): add AUXBIN_TARGETS

2002-11-12  AIDA Shinra <aida-s@jcom.home.ne.jp>

	* [w3m-dev 03408] edit From in w3mail.cgi 
	* scripts/w3mmail.cgi.in: edit from as well

2002-11-12  AIDA Shinra <aida-s@jcom.home.ne.jp>

	* [w3m-dev 03408] fix Bug#87472
	    MOUSE_SCROLL_LINE should be a run-time option
	* fm.h (relative_wheel_scroll): added
		(fixed_wheel_scroll_count): added
		(relative_wheel_scroll_ratio): added
	* main.c (mouse_scroll_line): added
		(process_mouse): s/MOUSE_SCROLL_LINE/mouse_scroll_line()/
	* menu.c (MOUSE_SCROLL_LINE): deleted
	* terms.h (MOUSE_SCROLL_LINE): deleted
	* rc.c (CMT_RELATIVE_WHEEL_SCROLL): added
		(CMT_RELATIVE_WHEEL_SCROLL_RATIO): added
		(CMT_FIXED_WHEEL_SCROLL_COUNT): added
		(wheelmode): added