@@ -1,3 +1,9 @@
+2002-11-12  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03422] Re: setting form on loading
+	* form.c (loadPreForm): initialize name
+			check textarea, name for /textarea
+
 2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03418] Re: tab browser
